--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   body {
     @apply relative z-1 bg-whiten font-satoshi text-base font-normal text-body;
   }
+  svg, path {
+    @apply fill-lightgray
+  }
 }
 
 @layer components {
@@ -36,7 +39,7 @@ html, body, #root {
 }
 
 a {
-    @apply hover:underline text-primary cursor-pointer
+    @apply hover:text-primary cursor-pointer
 }
 /* third-party libraries CSS */
 
